--- a/client/src/components/Home/homepage.css
+++ b/client/src/components/Home/homepage.css
@@ -1,25 +1,34 @@
 .home-container {
-  background-color: #27CC61;
+  background-color: #98b06f;
   overflow: hidden;
   align-content: center;
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
 }
 
 .welcome-header {
-  position: relative;
-  text-align: center;
-  top: -3em;
-  left: 0;
-  margin: 0;
+  display: flex;
+  font-size: 3em;
+  color: #211C20;
 }
 
 .information-header {
-  position: absolute;
+  display: flex;
   text-align: center;
   margin: 0;
+  font-size: 1.5em;
+  color: #211C20;
+}
+
+.home-headers-container {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 8em;
 }
