--- a/client/src/components/Lists/listpanel.css
+++ b/client/src/components/Lists/listpanel.css
@@ -2,6 +2,7 @@
   text-align: center;
   font-size: 1.5em;
   margin-bottom: 1em;
+  color: #98B06F;
 }
 
 .word-definition {
@@ -14,6 +15,10 @@
   text-align: center;
 }
 
+.list-panel-button-container > .edit-btn {
+  margin-left: 0.125em;
+  margin-right: 0.125em;
+}
 
 .delete-word-container {
   display: inline-flex;
@@ -26,6 +31,7 @@
 
 .change-title-label {
   font-weight: bold;
+  color: #98B06F;
 }
 
 .edit-list-name {
@@ -33,6 +39,17 @@
   font-style: italic;
   font-size: 1em;
   text-align: center;;
+  background-color: #262B31;
+  color: #29CCBF;
+  border-color: #29CCBF;
+  margin-top: 0.5em;
+  margin-bottom: 1em;
+}
+
+.edit-list-name:focus {
+  outline: none !important;
+  border: 1px solid;
+  box-shadow: 0 0 10px #29CCBF;
 }
 
 .delete-word-button {
@@ -50,19 +67,27 @@
 }
 
 .list-panel-container {
-  border: 1px solid;
+  border: 5px groove;
+  border-color: #262B31;
   border-radius: 8px;
   padding: 1.5em;
   box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
   width: auto;
-}
-
-.edit-list-name {
-  margin-top: 0.5em;
-  margin-bottom: 1em;
+  height: fit-content;
+  background-color: #211C20;
 }
 
 .list-panel-name-divider {
   width: 50%;
   margin-bottom: 1em;
+  color: #98B06F;
+}
+
+.list-panel-words-container {
+  height: auto;
+}
+
+.list-panel-words, .edit-list-words {
+  margin: 0;
+  color: #98B06F;
 }
