--- a/client/src/components/Lists/listspage.css
+++ b/client/src/components/Lists/listspage.css
@@ -1,13 +1,27 @@
 .welcome-h1 {
   text-align: center;
+  margin-top: 0;
 }
 
 #lists-display-container {
   display: grid;
   grid-column-gap: 2%;
-  grid-row-gap: 10%;
+  grid-row-gap: 2%;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
   padding-left: 2%;
   padding-right: 2%;
+  overflow: auto;
+  padding-bottom: 3em;
+}
+
+.lists-page-container {
+  background-color: #98B06F;
+  height: auto;
+  overflow: auto;
+}
+
+.lists-header-container {
+  height: auto;
+  padding-top: 3em;
 }
