--- a/client/src/components/Navigation/navbar.css
+++ b/client/src/components/Navigation/navbar.css
@@ -1,48 +1,64 @@
-
 .nav-link-list {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.nav-link {
+.nav-text-link {
   text-decoration: none;
-  float: left;
-  padding-top: 2em;
+  color: #98B06F;
 }
 
-.nav-text-link {
-  padding-left: 6em;
-  padding-right: 6em;
-  color: #CC2792;
-  font-size: 1.25em;
+.nav-route-li {
+  align-self: center;
 }
 
 .nav-container {
-  overflow: hidden;
+  display: flex;
+  flex-direction: row;
 }
 
-nav {
-  background-color: transparent;
+.nav-link-list {
+  display: flex;
+  flex-direction: row;
+  white-space: nowrap;
+  width: inherit;
+  justify-content: space-between;
 }
 
-.nav-logo {
-  text-decoration: none;
-  float: left;
-  padding-top: none;
+.login-button-container, .profile-icon-container {
+  width: fit-content;
 }
 
 .nav-button-container {
-  position: relative;
-  left: 3em;
+  display: flex;
+  flex-direction: row;
+  margin-right: 5em;
+  align-items: center;
 }
 
-.login-button-container {
-  position: relative;
-  top: 1.8em;
+.nav-button-li {
+  align-self: center;
 }
 
 .nav-avatar {
-  position: relative;
-  top: 2em;
+  margin-top: 0.35em;
+  width: 4em;
+  height: 4em;
+}
+
+.nav-logo-li {
+  margin-left: 1em;
+}
+
+.nav-logo {
+  height: 8em;
+  width: 100%;
+}
+
+#nav-bar {
+  background-color: #211C20;
+  padding-top: 0.5em;
+  padding-bottom: 0.25em;
+  position: sticky;
 }
