--- a/client/src/components/Profile/editprofile.css
+++ b/client/src/components/Profile/editprofile.css
@@ -1,11 +1,14 @@
 .profile-welcome-header, .profile-response-message {
   text-align: center;
+  color: #211C20;
 }
 
 .edit-profile-form  {
   display: table;
   margin: auto;
-  border: none;
+  border: 4px solid;
+  border-color: #262B31;
+  background-color: #211C20;
   border-radius: 8px;
   padding: 1.5em;
   box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
@@ -13,6 +16,7 @@
 
 .name-change-container {
   display: table-row;
+  margin-bottom: 1em;
 }
 
 .profile-button-container {
@@ -23,4 +27,26 @@
 .profile-button {
   margin-left: 0.125em;
   margin-right: 0.125em;
+}
+
+#profile-container {
+  padding-top: 5em;
+}
+
+.new-username-label {
+  color: #98B06F;
+}
+
+#username-input {
+  border: 1px solid;
+  border-color: #262B31;
+  background-color: #262B31;
+  color: #29CCBF;
+  margin-bottom: 1.5em;
+}
+
+#username-input:focus {
+  outline: none !important;
+  border: 1px solid;
+  box-shadow: 0 0 10px #29CCBF;
 }
