--- a/client/src/components/Quizzes/quizhome.css
+++ b/client/src/components/Quizzes/quizhome.css
@@ -1,8 +1,27 @@
-.quiz-home-header {
+.quiz-home-h1 {
   text-align: center;
-  margin-bottom: 3em;
+  font-size: 2.5em;
+  margin-bottom: 1em;
+  margin-top: 3em;
+  color: #211C20;
+}
+
+.quiz-home-h2 {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 2em;
+  color: #211C20;
 }
 
 .quiz-error-message {
   text-align: center;
+}
+
+.quiz-home-header-container, .quiz-page-container {
+  height: auto;
+}
+
+.quiz-page-container {
+  padding-bottom: 3em;
+  background-color: #98B06F;
 }
