--- a/client/src/components/Quizzes/quizhome.css
+++ b/client/src/components/Quizzes/quizhome.css
@@ -1,6 +1,7 @@
 .quiz-home-h1 {
   text-align: center;
   font-size: 2.5em;
+  font-family: Verdana;
   margin-bottom: 1em;
   margin-top: 3em;
   color: #211C20;
