--- a/client/src/components/Auth/form.css
+++ b/client/src/components/Auth/form.css
@@ -29,6 +29,7 @@
   display: table-cell;
   text-align: right;
   padding-right: 0.1em;
+  font-size: 1em;
 }
 
 .auth-form-input {
@@ -73,6 +74,9 @@
 .auth-form-h1 {
   margin-top: 0;
   color: #211C20;
+  font-family: Verdana;
+  font-size: 2.5em;
+  text-decoration: underline;
 }
 
 .auth-form-label {
