--- a/client/src/components/Home/homepage.css
+++ b/client/src/components/Home/homepage.css
@@ -13,7 +13,8 @@
 
 .welcome-header {
   display: flex;
-  font-size: 3em;
+  font-size: 3.5em;
+  font-family: Verdana;
   color: #211C20;
 }
 
@@ -21,7 +22,8 @@
   display: flex;
   text-align: center;
   margin: 0;
-  font-size: 1.5em;
+  font-size: 1.6em;
+  font-family: Verdana;
   color: #211C20;
 }
 
