--- a/client/src/components/Quizzes/quizgame.css
+++ b/client/src/components/Quizzes/quizgame.css
@@ -12,6 +12,8 @@
 .quiz-game-h1 {
   text-align: center;
   color: #211C20;
+  font-size: 2.5em;
+  font-family: Verdana;
 }
 
 .quiz-game-wrapper {
@@ -107,6 +109,7 @@
 .game-question-prompt {
   color: #211C20;
   font-weight: bold;
+  font-size: 1.4em;
 }
 
 .quiz-error-message {
