--- a/client/src/components/WordExplorer/wordexplorer.css
+++ b/client/src/components/WordExplorer/wordexplorer.css
@@ -10,6 +10,8 @@
 .word-explorer-header {
   margin-top: 0;
   color: #211C20;
+  font-family: Verdana;
+  font-size: 3em;
 }
 
 #word-explorer-container {
